force-app/main/default/objects/LancamentoHora__c/LancamentoHora__c.object-meta.xml
<CustomObject>
    <label>Lançamento de hora</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lançamentos de horas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>