force-app/main/default/objects/LancamentoHora__c/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atividade</label>
    <referenceTo>Atividade__c</referenceTo>
    <relationshipLabel>Lançamentos de horas</relationshipLabel>
    <relationshipName>LancamentosHoras</relationshipName>
    <type>Lookup</type>
</CustomField>