force-app/main/default/objects/LancamentoHora__c/fields/DiaPeriodo__c.field-meta.xml
<CustomField>
    <fullName>DiaPeriodo__c</fullName>
    <label>Dia do período</label>
    <referenceTo>DiaPeriodo__c</referenceTo>
    <relationshipLabel>Lançamentos de horas</relationshipLabel>
    <relationshipName>LancamentosHoras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>