force-app/main/default/objects/LancamentoHora__c/fields/HorasAusenciaNaoRemunerada__c.field-meta.xml
<CustomField>
    <fullName>HorasAusenciaNaoRemunerada__c</fullName>
    <label>Horas ausência não remunerada</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>