force-app/main/default/objects/LancamentoHora__c/fields/HorasAusenciaRemunerada__c.field-meta.xml
<CustomField>
    <fullName>HorasAusenciaRemunerada__c</fullName>
    <label>Horas ausência remunerada</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>