force-app/main/default/objects/LancamentoHora__c/fields/HorasBanco__c.field-meta.xml
<CustomField>
    <fullName>HorasBanco__c</fullName>
    <label>Horas banco</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>