force-app/main/default/objects/LancamentoHora__c/fields/HorasExtras__c.field-meta.xml
<CustomField>
    <fullName>HorasExtras__c</fullName>
    <label>Horas extras</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>