force-app/main/default/objects/LancamentoHora__c/fields/HorasFaturar__c.field-meta.xml
<CustomField>
    <fullName>HorasFaturar__c</fullName>
    <description>Armazena o valor de horas a ser faturado (glosado ou ajustado).</description>
    <label>Horas a Faturar</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>