force-app/main/default/objects/LancamentoHora__c/fields/HorasSobreaviso__c.field-meta.xml
<CustomField>
    <fullName>HorasSobreaviso__c</fullName>
    <label>Horas Sobreaviso</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>