force-app/main/default/objects/LancamentoHora__c/fields/JustificativaExtra__c.field-meta.xml
<CustomField>
    <fullName>JustificativaExtra__c</fullName>
    <label>Justificativa Extra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>