force-app/main/default/objects/LancamentoHora__c/fields/MotivoReprovacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoReprovacao__c</fullName>
    <label>Motivo reprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>