force-app/main/default/objects/LancamentoHora__c/fields/OrcamentoCompetencia__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoCompetencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vínculo com a competência onde o custo foi apurado.</description>
    <label>Orçamento Competência</label>
    <referenceTo>OrcamentoCompetencia__c</referenceTo>
    <relationshipLabel>Lançamentos de Horas (Custo)</relationshipLabel>
    <relationshipName>LancamentosHorasCusto</relationshipName>
    <type>Lookup</type>
</CustomField>