force-app/main/default/objects/LancamentoHora__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Período</label>
    <referenceTo>Periodo__c</referenceTo>
    <relationshipLabel>Lançamentos de horas</relationshipLabel>
    <relationshipName>LancamentosHoras</relationshipName>
    <type>Lookup</type>
</CustomField>