force-app/main/default/objects/LancamentoHora__c/fields/Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Pessoa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pessoa</label>
    <referenceTo>Pessoa__c</referenceTo>
    <relationshipLabel>Lançamentos de horas</relationshipLabel>
    <relationshipName>LancamentosHoras</relationshipName>
    <type>Lookup</type>
</CustomField>