force-app/main/default/objects/LancamentoHora__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <label>Responsável</label>
    <referenceTo>Responsavel__c</referenceTo>
    <relationshipLabel>Lançamentos de horas</relationshipLabel>
    <relationshipName>LancamentosHoras</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>