force-app/main/default/objects/LancamentoHora__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Rascunho&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lançado</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Faturado</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Em aprovação do serviço</fullName>
            </value>
            <value>
                <fullName>Em aprovação do RH</fullName>
            </value>
            <value>
                <fullName>Reprovado serviço</fullName>
            </value>
            <value>
                <fullName>Reprovado RH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>