force-app/main/default/objects/LancamentoHora__c/fields/ValorReceita__c.field-meta.xml
<CustomField>
    <fullName>ValorReceita__c</fullName>
    <description>Valor da receita recebida rateado para este lançamento de hora.</description>
    <label>Valor da Receita</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>