force-app/main/default/objects/LancamentoHora__c/fields/ValorTotalLancamento__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalLancamento__c</fullName>
    <formula>( DiaPeriodo__r.Periodo__r.ValorHora__c +  DiaPeriodo__r.Periodo__r.ValorHoraBeneficios__c ) * ( Horas__c +  2*HorasExtras__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total lançamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>