force-app/main/default/objects/LancamentoHora__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DiaPeriodo__c</columns>
    <columns>Horas__c</columns>
    <columns>HorasExtras__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>